bk_ida/sjengida/g3/search
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search/src/search.c:1205:33: error: use of undeclared identifier 'rc_index_0'
if ( ( _DWORD)captured != 13 && rc_index_0[captured] == rc_index_0[path[v20].captured] ) 
                                ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search/src/search.c:1205:57: error: use of undeclared identifier 'rc_index_0'
if ( ( _DWORD)captured != 13 && rc_index_0[captured] == rc_index_0[path[v20].captured] ) 
                                                        ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search/src/obj/search.o] Error 1
